--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "gulp": "^4.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-sass": "^4.0.2"
